Changes with ratchet-rails 0.0.1 / 2012-11-14

    *) The first public version.
       only install function